# duckduckgo-ai-chat

./: README.md  pyproject.toml
duckduckgo_ai_chat/: app.py  cli.py
tests/: test_duckduckgo_ai_chat.py
