[project]
name = "duckduckgo-ai-chat"
version = "0.0.3"
description = "CLI to use DuckDuckGo AI Chat service from terminal"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "requests",
    "colorama",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/duckduckgo-ai-chat"
Changelog = "https://github.com/sukhbinder/duckduckgo-ai-chat/releases"
Issues = "https://github.com/sukhbinder/duckduckgo-ai-chat/issues"
CI = "https://github.com/sukhbinder/duckduckgo-ai-chat/actions"

[project.scripts]
duckchat = "duckduckgo_ai_chat.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
